# adventofcode

./: .gitignore  Cargo.toml  optimization-backlog  output
benches/: benches.rs
data/: input  output
src/: lib.rs  main.rs
src/parsing/: d7.rs  day7.rs  mod.rs
src/seventeen/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  (+11 more)
src/seventeen/day7/: mod.rs  parsing.rs
src/seventeen/parsing/: day7.rs
src/sixteen/: d1.rs  day1.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/sixteen/day2/: mod.rs  parsing.rs
src/sixteen/day3/: mod.rs  parsing.rs
src/sixteen/day4/: mod.rs  parsing.rs
