[package]
name = "adventofcode"
version = "1.0.1"
authors = ["Frank <frank.049@hotmail.com>"]

[dependencies]
failure = "0.1.1"
bit-vec = "0.4.4"
rayon = "0.9"
itertools = "0.7.4"
crossbeam = "0.3.0"
crossbeam-channel = "0.1.2"
fnv = "1.0.6"
clap = "2.29.2"

[dependencies.nom]
version = "^3"
features = ["nightly"]

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "benches"
harness = false