[package]
authors = ["Frank <frank.049@hotmail.com>"]
name = "adventofcode"
version = "1.0.1"
[[bench]]
harness = false
name = "benches"

[dependencies]
bit-vec = "0.5.0"
clap = "2.31.2"
crossbeam = "0.3.2"
crossbeam-channel = "0.2.1"
failure = "0.1.1"
fnv = "1.0.6"
itertools = "0.7.8"
parking_lot = "0.6.1"
rayon = "1.0.1"
structopt = "0.2.10"

[dependencies.nom]
version = "4.0.0"

[dev-dependencies]
criterion = "0.2.3"
maplit = "1.0.1"
